--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
   },
   "homepage": "https://github.com/erankitcs/MyPortfolio-ReactJS-AWS-CICD#readme",
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "@material-ui/core": "^4.9.11",
+    "@material-ui/icons": "^4.9.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13"
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
