--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,13 @@
 version: 0.1
 
 phases:
-  build:
+  pre_build:
     commands:
       - npm install
+      - npm test
+  build:
+    commands:
+      #- npm install
       - npm run webpack
 artifacts:
   files:
